<resources>
    <string name="project_name">超限检测</string>
    <string name="app_name">快号通开发包</string>
    <string name="company_name">Beijing Wintone Technology Co.</string>
    <string name="app_id">59854553</string>
    <string name="detect_fragment_title">超限检测</string>
    <string name="record_fragment_title">记录查询</string>
    <string name="IDS_common_album">相册</string>
    <string name="IDS_common_take_photo">拍照</string>
    <string name="IDS_common_cancel">取消</string>
    <string name="IDS_device_not_support_print">设备不支持打印功能</string>
    <string name="IDS_common_ok">确定</string>
    <string name="IDS_save">保存</string>
    <string name="IDS_print">打印</string>
    <string name="IDS_no_paper">没有纸.</string>
    <string name="IDS_black_mark">检测黑边</string>
    <string name="IDS_has_paper">有纸.</string>
    <string name="IDS_has_car">有车</string>
    <string name="toast_1">Transaction print,use the AIDL mode!</string>
    <string name="toast_2">The service has been disconnected!</string>
    <string name="IDS_no_car">无车</string>
    <string name="IDS_connected">正常</string>
    <string name="IDS_not_connected">未连接</string>
    <string name="IDS_no_change">不可以和以前的信息一样</string>
    <string name="IDS_not_connected_scale">没有连接上这个称台</string>
    <string name="IDS_not_connected_instrument">没有连接上仪表</string>
    <string name="IDS_error_axis_error">检测车辆轴数失败，请重新检测！</string>
    <string name="IDS_welcome">欢迎使用便携式车辆称重系统</string>
    <string name="IDS_error_overtime_error">检测车辆超时，请重新检测！</string>
    <string name="IDS_overtime">超时，请重新检测！</string>
    <string name="IDS_select_scale_mode_hint">请选择称重车型</string>
    <string name="IDS_print_finished">打印完毕.</string>
    <string name="err_password">密码错误</string>
    <string name="IDS_voltage_low">电量太低.</string>
    <string name="IDS_voltage_high">电量太高.</string>
    <string name="IDS_print_fail">打印失败.</string>
    <string name="setting_fragment_title">设置</string>
    <string name="mine_fragment_title">我的</string>
    <string name="IDS_not_connected_instrument_net">没有连接上仪表所在网络</string>
    <string name="IDS_select_record_to_print">请选择要打印的记录</string>
    <string name="IDS_not_clear_data">满六轴数据已经清除</string>
    <string name="IDS_clear_data_success">所有称台已经清除数据</string>
    <string name="action_login_userselector_label">请选择登录用户</string>
    <string name="action_settings">设置</string>
    <string name="action_sign_in">登 录</string>
    <string name="only_display_overLimit_info">仅显示超限记录</string>
    <string name="copy_string">CopyRight©2019&#8211;2024 %s</string>
    <string name="administrator">管理员</string>
    <string name="action_sign_in_short">登 录</string>
    <string name="login_input_name">请输入用户名</string>
    <string name="login_input_password">请输入密码</string>
    <string name="confirm_input_password">请输入确认密码</string>
    <string name="activebutton">激活程序</string>
    <string name="auth_check_service_bind_success">授权验证服务 绑定成功</string>
    <string name="authbutton">授权验证</string>
    <string name="axisTypes">车辆型号</string>
    <string name="truck_limit">车辆限重</string>
    <string name="axis_Type">车型</string>
    <string name="axis_Type_c">车型:</string>
    <string name="backIndex">返回首页</string>
    <string name="backbtn">返回</string>
    <string name="backbtn_string">返回</string>
    <string name="beginstring">开始自动识别</string>
    <string name="business_license_recognize">执照识别</string>
    <string name="butclose">退出</string>
    <string name="butexitlog">退出程序</string>
    <string name="butset">设置</string>
    <string name="IDS_input_policy_info_hint">请输入执法单位</string>
    <string name="IDS_input_place_info_hint">请输入检测地点</string>
    <string name="IDS_no_car_type_to_select">暂时没有可以选择的车型</string>
    <string name="c_1_20" />
    <string name="camera_againest">继续拍照</string>
    <string name="cancel">取消</string>
    <string name="clear">清空</string>
    <string name="real_company_name">CopyRight@2015 西安道恒交通设备科技有限公司</string>
    <string name="compensation_item_type_title">轴型: %s</string>
    <string name="confirm">确定</string>
    <string name="photo_again">重拍</string>
    <string name="confirm_btn_string">确认</string>
    <string name="input_user_password">请输入用户密码</string>
    <string name="countinuebtn">继续</string>
    <string name="customCameraButton">拍照识别</string>
    <string name="delete">删除</string>
    <string name="delete_success">删除</string>
    <string name="input_admin_password">请输入管理员密码</string>
    <string name="policy_info">执法信息</string>
    <string name="port_info">称台连接方式</string>
    <string name="plate_method">车牌识别方式</string>
    <string name="test_info">测试专用</string>
    <string name="other_setting">其他设置</string>
    <string name="compensation_factor">补偿系数</string>
    <string name="static_weight">静态称重</string>
    <string name="modify_password">修改密码</string>
    <string name="modify_company">修改公司信息</string>
    <string name="add_user">添加用户</string>
    <string name="IDS_delete_user">删除用户</string>
    <string name="logout">注销</string>
    <string name="print">打印</string>
    <string name="static_calibration_title">静态称重</string>
    <string name="static_calibration_hint">请在称台上施加重物测试</string>
    <string name="compensation_by_speed">按速度补偿</string>
    <string name="compensation_by_truck_type">按车型补偿</string>
    <string name="compensation_by_truck_type_weight">按照重量分段补偿</string>
    <string name="big_car_compensation">大件车补偿</string>
    <string name="big_car_1">I型车</string>
    <string name="big_car_2">Ⅱ型车</string>
    <string name="big_car_3">Ⅲ型车</string>
    <string name="compensation_by_axis">按轴型补偿</string>
    <string name="compensation_by_two_connect_axis">二联轴补偿</string>
    <string name="default_company_name">西安道恒交通设备科技有限公司</string>
    <string name="IDS_mine">我的</string>
    <string name="IDS_record">记录</string>
    <string name="IDS_detect">检测</string>
    <string name="IDS_common_success">成功</string>
    <string name="IDS_common_fail">失败</string>
    <string name="delete_static_value_confirm">删除该条标定值?</string>
    <string name="dialog_alert">提示</string>
    <string name="IDS_weight_unit">Kg</string>
    <string name="IDS_speed_unit">Km/h</string>
    <string name="dialog_message_one">请将设备AndroidWT文件夹下的wt.dev文件发送至文通Android产品授权管理员并取得激活文件，将激活文件拷贝到设备根目录下,再点击“激活程序”->“授权验证”，此时请不要输入序列号</string>
    <string name="dialog_title">首次使用若能联网请在此填写序列号，不区分大小写，并点击“授权验证”按钮，否则请点击“离线激活”按钮。</string>
    <string name="editbIsFieldImage">0</string>
    <string name="editbIsNight">0</string>
    <string name="editbMovingImage">0</string>
    <string name="editbOutputSingleFrame">0</string>
    <string name="editbVertCompress">0</string>
    <string name="editnContrast">9</string>
    <string name="editnErrorModelSN">0</string>
    <string name="editnImageFormat">1</string>
    <string name="editnLastError">0</string>
    <string name="editnMaxPlateWidth">200</string>
    <string name="editnMinPlateWidth">80</string>
    <string name="editnOCR_Th">5</string>
    <string name="editnPlateLocate_Th">7</string>
    <string name="editnSlopeDetectRange">0</string>
    <string name="fail_to_connect_to_instrument">请把手机连接到检测网络</string>
    <string name="failed_check_activation_code">校验激活码失败</string>
    <string name="failed_check_failure">激活文件校验失败</string>
    <string name="failed_disconnected_server">未连接到服务器</string>
    <string name="failed_connected_sensor_sever">请连接上仪表</string>
    <string name="failed_noInit_function">未调用初始化函数</string>
    <string name="failed_noexist_serial_number">授权服务器无此序列号</string>
    <string name="failed_not_active">未激活</string>
    <string name="failed_obtain_activation_code">获取激活码失败或未连接到服务器</string>
    <string name="failed_other_errors">其他错误</string>
    <string name="failed_readJPG_error">读jpg图片错误，可能是图片超过1920*1080分辨率</string>
    <string name="failed_serial_number_null">指定序列号为null</string>
    <string name="failed_serial_number_used">序列号已使用</string>
    <string name="failed_unable_create_authfile">无法创建授权文件</string>
    <string name="failed_validation_faile">没有激活或激活码校验失败</string>
    <string name="focus_out">焦距不准,请重拍!</string>
    <string name="initialization">初始化</string>
    <string name="license_verification">授权验证</string>
    <string name="license_verification_failed">授权验证失败</string>
    <string name="license_verification_success">授权验证成功</string>
    <string name="light1_string">打开闪关灯</string>
    <string name="light2_string">关闭闪关灯</string>
    <string name="lock">锁定</string>
    <string name="low_battery_dialog_title">低电量提示</string>
    <string name="low_battery_notification">电量过低，请充电！</string>
    <string name="notready">未就绪</string>
    <string name="offline_activation">离线激活</string>
    <string name="plate_brightness_reviews">亮度评价</string>
    <string name="plate_car_color">车的颜色</string>
    <string name="plate_color">车牌颜色</string>
    <string name="plate_id">车牌号码:</string>
    <string name="plate_color_code">车牌颜色代码</string>
    <string name="plate_elapsed_time">时间</string>
    <string name="IDS_detect_time">时间</string>
    <string name="IDS_detect_date">检测日期</string>
    <string name="IDS_detect_result">检测结果</string>
    <string name="plate_leftupper_pointX">车牌左上点横坐标</string>
    <string name="plate_leftupper_pointY">车牌左上点纵坐标</string>
    <string name="plate_light">车的亮度</string>
    <string name="plate_move_orientation">车牌运动方向</string>
    <string name="plate_number">车牌号码</string>
    <string name="plate_reliability">整牌可信度</string>
    <string name="plate_rightdown_pointX">车牌右下点横坐标</string>
    <string name="plate_rightdown_pointY">车牌右下点纵坐标</string>
    <string name="plate_type_code">车牌类型代码</string>
    <string name="plateid_result">识别结果</string>
    <string name="prompt_password">请输入登录密码</string>
    <string name="radiobutarmpolice2no">否</string>
    <string name="radiobutarmpolice2yes">是</string>
    <string name="radiobutarmpoliceno">否</string>
    <string name="radiobutarmpoliceyes">是</string>
    <string name="radiobutbIsAutoSlopeno">否</string>
    <string name="radiobutbIsAutoSlopeyes">是</string>
    <string name="radiobutbIsFieldImageno">否</string>
    <string name="radiobutbIsFieldImageyes">是</string>
    <string name="radiobutbIsNightno">否</string>
    <string name="radiobutbIsNightyes">是</string>
    <string name="radiobutbMovingImageno">否</string>
    <string name="radiobutbMovingImageyes">是</string>
    <string name="radiobutbOutputSingleFrameno">否</string>
    <string name="radiobutbOutputSingleFrameyes">是</string>
    <string name="radiobutbVertCompressno">否</string>
    <string name="radiobutbVertCompressyes">是</string>
    <string name="radiobutdFormatno">否</string>
    <string name="radiobutdFormatyes">是</string>
    <string name="radiobutembassyno">否</string>
    <string name="radiobutembassyyes">是</string>
    <string name="radiobutonlylocationno">否</string>
    <string name="radiobutonlylocationyes">是</string>
    <string name="radiobutonlytworowyellowno">否</string>
    <string name="radiobutonlytworowyellowyes">是</string>
    <string name="radiobuttractorno">否</string>
    <string name="radiobuttractoryes">是</string>
    <string name="radiobuttworowarmyno">否</string>
    <string name="radiobuttworowarmyyes">是</string>
    <string name="radiobuttworowyellowno">否</string>
    <string name="radiobuttworowyellowyes">是</string>
    <string name="realtime">预览识别</string>
    <string name="recogbutton">调用识别</string>
    <string name="save">保存</string>
    <string name="two_long_compensation">两长轴补偿</string>
    <string name="three_long_compensation">三长轴补偿</string>
    <string name="three_connect_compensation">三联轴补偿</string>
    <string name="stop">停止</string>
    <string name="start">开始</string>
    <string name="open_camera_power">牌识</string>
    <string name="take_photo">拍照</string>
    <string name="camera_plate">摄像头</string>
    <string name="IDS_scale_with_order">%s号称台</string>
    <string name="sensor_A_label">A</string>
    <string name="battery_label">电量:</string>
    <string name="signal_label">信号:</string>
    <string name="IDS_weight_label">重量:</string>
    <string name="IDS_weight_kilo">公斤</string>
</resources>