<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lu.portable.detect.ui.PlateidMainActivity"
    android:layout_height="fill_parent">
    <include
        android:id="@+id/title"
        layout="@layout/title_bar_layout" />


    <ImageView
        android:id="@+id/plateImage"
        android:layout_width="250dp"
        android:layout_height="180dp"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/plateId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/plateImage"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="50dp"
        android:text="TextView"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textNumber"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/plate_color" />

    <TextView
        android:id="@+id/plateColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/plateId"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="50dp"
        android:text="TextView"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/plateImage"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/plate_id" />

    <LinearLayout
        android:layout_below="@+id/plateColor"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="80dp"
        android:layout_height="wrap_content">
    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/btn_style"
        android:onClick="onClick"
        android:text="@string/confirm" />
    <Button
        android:id="@+id/take_photo_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/btn_style"
        android:onClick="onClick"
        android:text="@string/photo_again" />
    </LinearLayout>

</RelativeLayout>
