<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_a_weight"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/device_img"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_margin="15dp"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_static_scale" />
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/scale_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_toRightOf="@id/device_img"
        android:text="@string/IDS_scale_with_order"
        android:textSize="@dimen/font_size_large" />

    <LinearLayout
        android:id="@+id/weight_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible">
        <TextView
            android:id="@+id/weight_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/IDS_weight_label"
            android:textSize="@dimen/font_size_large" />
        <TextView
            android:id="@+id/load_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.0"
            android:textSize="18.0sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/IDS_weight_kilo"
            android:textSize="@dimen/font_size_large" />
    </LinearLayout>
</LinearLayout>

</LinearLayout>